<resources>
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">Couldn\'t connect</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
    <string name="accessibility_action_divider_left_30">Left 30%</string>
    <string name="accessibility_action_divider_left_50">Left 50%</string>
    <string name="accessibility_action_divider_left_70">Left 70%</string>
    <string name="accessibility_action_divider_left_full">Left full screen</string>
    <string name="accessibility_action_divider_right_full">Right full screen</string>
    <string name="accessibility_action_divider_top_30">Top 30%</string>
    <string name="accessibility_action_divider_top_50">Top 50%</string>
    <string name="accessibility_action_divider_top_70">Top 70%</string>
    <string name="accessibility_action_divider_top_full">Top full screen</string>
    <string name="accessibility_airplane_mode">Airplane mode.</string>
    <string name="accessibility_ambient_display_charging">Charging</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_battery_details">Open battery details</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
    <string name="accessibility_battery_level_with_estimate">Battery %1$s percent, about %2$s left based on your usage</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_bluetooth_tether">Bluetooth tethering.</string>
    <string name="accessibility_brightness">Display brightness</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_cast_name">Connected to %s.</string>
    <string name="accessibility_casting">@string/quick_settings_casting</string>
    <string name="accessibility_casting_turned_off">Screen casting stopped.</string>
    <string name="accessibility_cell_data">Mobile Data</string>
    <string name="accessibility_cell_data_on">Mobile Data On</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_data_connection_wifi">Wi-Fi</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_saver_off">Data Saver is off</string>
    <string name="accessibility_data_saver_on">Data Saver is on</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_desc_close">Close</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_desc_connecting">Connecting.</string>
    <string name="accessibility_desc_lock_screen">Lock screen.</string>
    <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
    <string name="accessibility_desc_notification_shade">Notification shade.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_desc_quick_settings_edit">Quick settings editor.</string>
    <string name="accessibility_desc_recent_apps">Overview.</string>
    <string name="accessibility_desc_settings">Settings</string>
    <string name="accessibility_desc_work_lock">Work lock screen</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">This feature is experimental and may affect performance.</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_divider">Split-screen divider</string>
    <string name="accessibility_ethernet_connected">Ethernet connected.</string>
    <string name="accessibility_ethernet_disconnected">Ethernet disconnected.</string>
    <string name="accessibility_face_dialog_face_icon">Face icon</string>
    <string name="accessibility_fingerprint_dialog_fingerprint_icon">Fingerprint icon</string>
    <string name="accessibility_gps_acquiring">GPS acquiring.</string>
    <string name="accessibility_gps_enabled">GPS enabled.</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_ime_switch_button">Switch input method</string>
    <string name="accessibility_key">Custom navigation button</string>
    <string name="accessibility_location_active">Location requests active</string>
    <string name="accessibility_long_click_tile">Open settings</string>
    <string name="accessibility_manage_notification">Manage notifications</string>
    <string name="accessibility_managed_profile">Work profile</string>
    <string name="accessibility_manual_zen_less_time">Less time.</string>
    <string name="accessibility_manual_zen_more_time">More time.</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_multi_user_switch_inactive">Current user %s</string>
    <string name="accessibility_multi_user_switch_quick_contact">Show profile</string>
    <string name="accessibility_multi_user_switch_switcher">Switch user</string>
    <string name="accessibility_multi_user_switch_switcher_with_current">Switch user, current user %s</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_no_signal">No signal.</string>
    <string name="accessibility_no_sim">No SIM.</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="clear_all_notifications_text">Clear all</string>
    <string name="guts_force_close_app">Close App</string>
    <string name="headset">Headset</string>
    <string name="inline_blocking_helper">You usually dismiss these notifications. \10Keep showing them?</string>
    <string name="inline_deliver_silently_button">Deliver Silently</string>
    <string name="inline_keep_button">Keep showing</string>
    <string name="inline_ok_button">Apply</string>
    <string name="inline_turn_off_notifications">Turn off notifications</string>
    <string name="inline_undo">Undo</string>
    <string name="manage_notifications_text">Manage</string>
    <string name="notification_alert_title">Alerting</string>
    <string name="notification_app_settings">Customize</string>
    <string name="notification_channel_disabled">You won\'t see these notifications anymore</string>
    <string name="notification_channel_summary_default">Gets your attention with sound or vibration.</string>
    <string name="notification_channel_summary_low">Helps you focus without sound or vibration.</string>
    <string name="notification_delegate_header">Proxied notification</string>
    <string name="notification_more_settings">More settings</string>
    <string name="notification_multichannel_desc">This group of notifications cannot be configured here</string>
    <string name="notification_silence_title">Silent</string>
    <string name="notification_unblockable_desc">These notifications can\'t be modified.</string>
    <string name="quick_settings_bluetooth_label">Bluetooth</string>
    <string name="quick_settings_cast_title">Screen Cast</string>
    <string name="quick_settings_cellular_detail_title">Mobile data</string>
    <string name="quick_settings_dnd_label">Do Not Disturb</string>
    <string name="quick_settings_hotspot_label">Hotspot</string>
    <string name="quick_settings_wifi_label">Wi-Fi</string>
    <string name="status_bar_airplane">Airplane mode</string>
    <string name="status_bar_alarm">Alarm</string>
    <string name="status_bar_camera">Camera</string>
    <string name="status_bar_data_saver">Data saver</string>
    <string name="status_bar_ethernet">Ethernet</string>
    <string name="status_bar_location">Location</string>
    <string name="status_bar_microphone">Microphone</string>
    <string name="status_bar_nfc">NFC</string>
    <string name="status_bar_roaming">Roaming</string>
    <string name="status_bar_volte">VoLTE</string>
    <string name="status_bar_vowifi">VoWiFi</string>
    <string name="status_bar_vpn">VPN</string>
    <string name="statusbar_items_title">Statusbar icons</string>
</resources>