<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.notification.row.FooterView xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="4dp" android:paddingEnd="4dp">
    <com.android.systemui.statusbar.AlphaOptimizedFrameLayout android:id="@+id/content" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.android.systemui.statusbar.notification.row.FooterViewButton android:textColor="?attr/wallpaperTextColor" android:layout_gravity="start" android:id="@+id/manage_text" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_notifications_text" android:contentDescription="@string/accessibility_manage_notification" android:textAllCaps="false" style="@style/Widget.Material.Button.Borderless"/>
        <com.android.systemui.statusbar.notification.row.FooterViewButton android:textColor="?attr/wallpaperTextColor" android:layout_gravity="end" android:id="@+id/dismiss_text" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear_all_notifications_text" android:contentDescription="@string/accessibility_clear_all" style="@style/Widget.Material.Button.Borderless"/>
    </com.android.systemui.statusbar.AlphaOptimizedFrameLayout>
</com.android.systemui.statusbar.notification.row.FooterView>
