<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/menu_container" android:layout_width="@dimen/navigation_side_padding" android:layout_height="match_parent" android:importantForAccessibility="no">
    <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/menu" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@string/accessibility_menu" app:keyCode="82" app:playSound="false"/>
    <include android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerInside" android:paddingStart="0dp" android:paddingEnd="0dp" layout="@layout/ime_switcher"/>
    <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/rotate_suggestion" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@string/accessibility_rotate_button"/>
    <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/accessibility_button" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@string/accessibility_accessibility_button"/>
</FrameLayout>
